--- a/documento.tex
+++ b/documento.tex
@@ -105,7 +105,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \autor{Cícero Moreira Hitzschky Filho}
-\titulo{Um estudo sobre a teoria da medida e integração}
+\titulo{UM ESTUDO INTRODUTÓRIO DA TEORIA DA MEDIDA E INTEGRAÇÃO DE LEBESGUE}
 \data{2023}
 \local{Fortaleza -- Ceará}
 
