--- a/elementos-textuais/considerações-finais.tex
+++ b/elementos-textuais/considerações-finais.tex
@@ -34,9 +34,14 @@
 	Exibimos, inicialmente, as integrais de Lebesgue para funções simples.
 	Fixamos a medida de Lebesgue para que os exemplos ficassem mais claros, pois nesta parte, a diferença entre a integral de Lebesgue e a integral de Riemann era indistinguível. 
 	Ao dar continuidade, lembramos a construção da integral de Riemann para funções não negativas para que depois pudéssemos mostrar a construção de Lebesgue e evidenciar a diferença entre as duas.
-	Neste momento, várias ferramentas para integrais de Lebesgue para funções não negativas foram enunciadas e provadas para que esta pudesse ser generalizada para funções quaisquer. Vale ressaltar que em todas as construções tiveram auxílio geométrico para simplificar ao máximo a teoria. 
+	Neste momento, várias ferramentas para integrais de Lebesgue para funções não negativas foram enunciadas e provadas para que esta pudesse ser generalizada para funções quaisquer.  
    	
-   	FALTA CONCLUIR O FECHAMENTO.
+   	Com isso, acreditamos que a forma como foi organizado este trabalho possibilita um estudo introdutório sobre a teoria da medida e integração de Lebesgue para alunos de graduação em ciências exatas em uma disciplina optativa.
+   	Essa crença surge da simplificação do texto e da teoria para que aborde coisas pontais e não tão gerais como se é esperado em um primeiro contato com a teoria. 
+   	Fazemos isso, por exemplo, quando decidimos começar diretamente com a definição de $\sigma$-álgebra ao invés de iniciar com a definição de semi-anel como faz o livro Medida e Integração de Pedro Jesus Fernandez (\citeyear{pedro}), por exemplo.
+   	Além disso, tratamos primeiro de funções mensuráveis para, em seguida, trabalhamos com medida o que também não é comum na bibliografia brasileira.
+   	Por mim, tentamos sempre por gráficos quando julgamos necessário o que também é escasso em livros sobre o tema por pensar em um público diferente ao que destina esse trabalho. 
+   	 
     
     
     
