--- a/elementos-pos-textuais/referencias.bib
+++ b/elementos-pos-textuais/referencias.bib
@@ -1,5 +1,4 @@
 
-
 @book{bartle,
     author       = {Robert G. Bartle}, 
     title        = {The Elements of Integration and Lebesgue Measure},
@@ -17,7 +16,6 @@
     address = "São Paulo",
     publisher = "EdUsp"
 }.
-
 
 @book{elon,
 author = "Elon Larges Lima",
@@ -49,13 +47,13 @@ publisher = "Blucher"
 }.
 
 
-@book{book:{91627986},
+@book{pedro,
    title =     {Medida e Integração, 2a Edição},
    author =    {Pedro J. Fernandez},
    publisher = {IMPA},
    year =      {2002},
-   url =       {libgen.li/file.php?md5=8adc0397b108b380c863d39a84b4dd06}}
-
+   }.
+%url =       {libgen.li/file.php?md5=8adc0397b108b380c863d39a84b4dd06}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 @article{BROLEZZI,
