--- a/elementos-pre-textuais/abstract.tex
+++ b/elementos-pre-textuais/abstract.tex
@@ -1,7 +1,12 @@
-The theory of measure and integration is undoubtedly one of the most important topics for the advancement in the study of mathematics. It was initially developed by Newton and Leibniz and later generalized by Lebesgue. Originally intended for application in physics, Lebesgue's generalization has found applications in various fields such as Functional Analysis, Probability, Statistics, Partial Differential Equations, among others.
-Although Lebesgue's integration theory is extremely important today, it is not commonly presented to undergraduate students in exact sciences. With that said, this work aims to introduce the theory of measure and Lebesgue integration in an introductory manner to undergraduate students in natural sciences, seeking to expose some of the most relevant and elementary results. This is done using a basic methodology with a quantitative approach through a literature review.
-Through this review, we also achieve the following specific objectives: define the foundation of the study of measure theory through measurable spaces, understand the generalized measure theory, and describe the process of constructing the Lebesgue integral as the measure theory advances.
+The theory of measure and integration is an important subject for advancing studies in mathematics. 
+It was initially developed by Bernhard Riemann (1826-1866), Georg Cantor (1845-1918) and Emile Borel (1871-1956) being later generalized by Henri Lebesgue (1875-1941). 
+Primarily, its development aimed to generalize Riemann's integral, correcting its limitation to exceptional cases. 
+However, in modern times, it finds applications in various areas such as Functional Analysis, Probability, Statistics, Partial Differential Equations, among others.
+Despite the contemporary significance of Lebesgue's integration theory, it is not commonly presented to undergraduate students in exact sciences. 
+Therefore, this work seeks to introduce Lebesgue's theory of measure and integration to undergraduate students in natural sciences, aiming to expose some of the most relevant and elementary results.
+This is done using a basic methodology with a quantitative approach through a literature review.
+Through this approach, we also achieve the following specific objectives: define the foundation of the study of measure theory through measurable spaces, understand the generalized theory of measure, and describe the process of constructing the Lebesgue integral as the measure theory advances. 
 Finally, a proposal is suggested for presenting the topic covered in this work to undergraduate students in exact sciences.
 
-% Separe as Keywords por ponto e vírgula ';' e finalize por .
+% Keywords, separated by a period
 \keywords{measure theory; Lebesgue integration theory; calculus education.}
