--- a/elementos-pre-textuais/agradecimentos.tex
+++ b/elementos-pre-textuais/agradecimentos.tex
@@ -3,7 +3,7 @@ Aos meus professores de ensino médio Ellen Lima e Renato Castro pelo incentivo 
 Aos professores Leo Ivo da Silva Souza e Jose Eduardo Moura Garcez pelos conselhos e motivações acadêmicas.\\
 Ao Prof. Dr. Nícolas Alcântara de Andrade por me apresentar esta maravilhosa teoria no curso de probabilidade. \\
 Ao Prof. Dr. Claudemir Silvino Leandro pela exímia orientação deste trabalho.\\
-Aos colegas da Universidade Estadual do Ceará pela ajuda direta ou indireta.\\
+Aos colegas da Universidade Estadual do Ceará (UECE) por qualquer tipo de ajuda nesta etapa da minha vida.\\
 
 
 
