--- a/elementos-textuais/1Introdução.tex
+++ b/elementos-textuais/1Introdução.tex
@@ -12,19 +12,23 @@
 
 \chapter{Introdução}
 % Justificativa
+
     Conseguir medir grandezas é essencial em nosso cotidiano.
     Medimos tempo, distância, velocidade, etc.
     Embora seja usada constantemente nos dias atuais, a ação de medir é bem antiga possuindo registro de seu uso em 3100 a.C.
     Em relação à essa época, \citeauthor{boy}(\citeyear{boy}) expõe que os egípcios possuíam uma precisão grandiosa no que se referia a contar e medir;
     com essa habilidade, fizeram feitos extraordinários como o calendário solar e a construção das pirâmides.
-    Desde então vem-se trabalhando no avanço da teoria da medida tanto de forma prática como de forma teórica.
+    Ou seja, a ação de medir era dada, matematicamente, de forma empírica não havendo o famoso rigor matemático que conhecemos hoje.
     
-    As aplicações mais teóricas de medida vieram com os estudos de Newton que trataram sobre taxa de variação de quantidades continuamente variáveis tais como
-    comprimentos, áreas e volumes; tendo desenvolvido, também, um método para calcular a soma das ordenadas sob uma curva \cite{boy}. 
-    Embasando-se no mesmo autor, vemos que esse método recebeu o nome de integral e foi denotado, por Leibniz, como $\displaystyle \int$; essa definição de integral foi refinada por Riemann e é, nos dias de hoje, comumente chamada de Integral de Riemann. 
+	\begin{comment}
+		    As aplicações mais teóricas de medida vieram com os estudos de Newton que trataram sobre taxa de variação de quantidades continuamente variáveis tais como
+		comprimentos, áreas e volumes; tendo desenvolvido, também, um método para calcular a soma das ordenadas sob uma curva \cite{boy}. 
+		Embasando-se no mesmo autor, vemos que esse método recebeu o nome de integral e foi denotado, por Leibniz, como $\displaystyle \int$; essa definição de integral foi refinada por Riemann e é, nos dias de hoje, comumente chamada de Integral de Riemann.
+	\end{comment} 
     
-    Pelo fim do século XIX, muitos matemáticos buscavam refutar teoremas já estabelecidos por meio de contraexemplos construídos por funções \enquote{patológicas}\cite{boy}.
-    Isso gerou um grande movimento matemático, no século XX, que tinha como objetivo trazer rigor à matemática.
+    \enquote{
+    	Pelo fim do século dezenove, a ênfase no rigor levou numerosos matemáticos à produção de exemplos de funções 'patológicas' que, devido a alguma propriedade incomum, violavam um teorema que antes se supunha válido em geral} \cite[p.415]{boy}.
+    Isso gerou um grande movimento matemático, no século XX, que tinha como objetivo trazer um rigor unificado à matemática.
     Foi nesse movimento que o matemático francês Henri Lebesgue (1875-1941) notou aplicações limitadas da integral de Riemann através do seguinte pensamento:
     
     \begin{citlon}
